--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="NavBar">#4257b2</color>
+    <color name="Button">#3ccfcf</color>
+    <color name="Gray">#DCDFEC</color>
+    <color name="White">#ffffff</color>
 </resources>
