--- a/app/src/main/res/layout/activity_study.xml
+++ b/app/src/main/res/layout/activity_study.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="#E8E8E3"
+    android:orientation="vertical"
     tools:context=".StudyActivity">
 
     <LinearLayout
@@ -14,10 +14,21 @@
         android:background="@color/toobar">
 
         <ImageView
+            android:id="@+id/back_home"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginLeft="5dp"
             android:src="@drawable/icon_back" />
+
+        <TextView
+            android:id="@+id/titleCourse"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="60px"
+            android:text="HCI test 2"
+            android:textColor="#FFFFFF"
+            android:textSize="25sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -26,13 +37,6 @@
         android:orientation="vertical"
         android:padding="20px">
 
-        <TextView
-            android:id="@+id/titleCourse"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="HCI test 2"
-            android:textColor="#000000"
-            android:textSize="25sp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -161,23 +165,56 @@
         </LinearLayout>
 
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="100px"
+            android:orientation="horizontal"
+            android:weightSum="2">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="Học tất cả"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="Học 8"
+                    android:textSize="20sp" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:weightSum="12">
 
-            <TextView
-                android:id="@+id/title_the"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="15px"
-                android:layout_weight="1"
-                android:text="Thẻ"
-                android:textColor="#000000"
-                android:textSize="25sp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+            <!--            <TextView-->
+            <!--                android:id="@+id/title_the"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_marginBottom="15px"-->
+            <!--                android:layout_weight="1"-->
+            <!--                android:text="Thẻ"-->
+            <!--                android:textColor="#000000"-->
+            <!--                android:textSize="25sp"-->
+            <!--                app:layout_constraintLeft_toLeftOf="parent"-->
+            <!--                app:layout_constraintTop_toTopOf="parent" />-->
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/ryce_study"
