--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,23 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#E8E8E3"
     tools:context=".fragment.HomeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/reviewHome"
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="20px">
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/float_addThuMuc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        <TextView
+            android:id="@+id/hocphan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Học phần"
+            android:textColor="#020202"
+            android:textSize="22sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        android:layout_gravity="center_horizontal|bottom"
-        android:layout_marginBottom="50px"
-        android:src="@drawable/add" />
+        <TextView
+            android:id="@+id/xemtatcahocphan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Xem tất cả >"
+            android:textColor="#24B396"
+            android:textSize="18sp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/reviewHome"
+            android:layout_width="match_parent"
+            android:layout_height="400px"
+            android:layout_marginTop="10px"
+            android:background="#FFFFFF"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/hocphan" />
+
+        <TextView
+            android:id="@+id/hocphandajoin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30px"
+            android:text="Các học phần đã join"
+            android:textColor="#020202"
+            android:textSize="22sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/reviewHome" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/reviewHome2"
+            android:layout_width="match_parent"
+            android:layout_height="400px"
+            android:layout_marginTop="10px"
+            android:background="#FFFFFF"
+            app:layout_constraintLeft_toLeftOf="parent"
+
+            app:layout_constraintTop_toBottomOf="@+id/hocphandajoin" />
+
+        <TextView
+            android:id="@+id/xemtatcahocphandajoin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30px"
+            android:text="Xem tất cả >"
+            android:textColor="#24B396"
+            android:textSize="18sp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/reviewHome" />
+
+        <ViewFlipper
+            android:id="@+id/quangcao"
+            android:layout_width="match_parent"
+            android:layout_height="500px"
+            android:layout_marginTop="60px"
+            app:layout_constraintTop_toBottomOf="@+id/reviewHome2" >
+            <ImageView
+                android:scaleType="centerCrop"
+                android:src="@drawable/cuong"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+            <ImageView
+                android:scaleType="centerCrop"
+                android:src="@drawable/cuong2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </ViewFlipper>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- TODO: Update blank fragment layout -->
+
 
 </FrameLayout>
