--- a/app/src/main/res/layout/fragment_add_course.xml
+++ b/app/src/main/res/layout/fragment_add_course.xml
@@ -14,33 +14,22 @@
         android:gravity="center_vertical"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="5dp"
-            android:padding="10dp"
-            android:src="@drawable/icon_back" />
+>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
             android:text="Create set"
             android:textColor="@color/White"
-            android:textSize="20sp"
+            android:textSize="25dp"
             android:textStyle="bold" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="165dp"
-            android:src="@drawable/icon_setting" />
 
         <ImageView
             android:id="@+id/checkBtn"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginLeft="15dp"
+            android:layout_marginLeft="225dp"
             android:src="@drawable/icon_check" />
 
     </LinearLayout>
@@ -101,11 +90,11 @@
         android:layout_height="match_parent"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:backgroundTint="#03A9F4"
+        android:backgroundTint="@color/NavBar"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
         android:clickable="true"
-        app:srcCompat="@drawable/icon_add_item"
+        app:srcCompat="@drawable/ic_baseline_add_24"
         tools:ignore="VectorDrawableCompat" />
 </RelativeLayout>
