--- a/app/src/main/res/layout/activity_the_ghi_nho.xml
+++ b/app/src/main/res/layout/activity_the_ghi_nho.xml
@@ -4,6 +4,62 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#E8E8E3"
+    android:padding="50px"
     tools:context=".TheGhiNhoActivity">
+
+    <LinearLayout
+        android:id="@+id/theghinhohihi"
+        android:layout_width="match_parent"
+        android:layout_height="1200px"
+        android:layout_marginTop="50px"
+        android:background="#ffffff"
+        android:orientation="vertical"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar">
+
+        <TextView
+            android:id="@+id/hienthiganthe"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="aaa"
+            android:textSize="18sp" />
+    </LinearLayout>
+
+    <Switch
+        android:id="@+id/switch1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="120px"
+        android:layout_marginTop="50px"
+        android:text="Gắn sao"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="61dp"
+        tools:layout_editor_absoluteY="60dp" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30px"
+        android:layout_marginRight="220px"
+        android:text="Bắt đầu"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="241dp"
+        tools:layout_editor_absoluteY="52dp" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="700px"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50px"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button"
+        tools:layout_editor_absoluteX="42dp"
+        tools:layout_editor_absoluteY="92dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
