--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -79,17 +79,19 @@
             android:layout_width="match_parent"
             android:layout_height="500px"
             android:layout_marginTop="60px"
-            app:layout_constraintTop_toBottomOf="@+id/reviewHome2" >
+            app:layout_constraintTop_toBottomOf="@+id/reviewHome2">
+
             <ImageView
-                android:scaleType="centerCrop"
-                android:src="@drawable/quiz"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/quiz" />
+
             <ImageView
-                android:scaleType="centerCrop"
-                android:src="@drawable/quiz2"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/quiz2" />
         </ViewFlipper>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
