--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,5 @@
     <color name="White">#ffffff</color>
     <color name="Black">#000000</color>
     <color name="toobar">#0035F8</color>
-
+    <color name="colorBlue">#5EB7CF</color>
 </resources>
