--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,22 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:id="@+id/test"
+        android:layout_width="wrap_content"
+        android:layout_marginTop="400px"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:weightSum="10">
 
-<!--        <TextView-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="10px"-->
-<!--            android:layout_marginLeft="10px"-->
-<!--            android:layout_weight="1"-->
-<!--            android:text="Học Phần"-->
-<!--            android:textColor="#020202"-->
-<!--            android:layout_marginBottom="15px"-->
-<!--            android:textSize="25sp" />-->
+        <!--        <TextView-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginTop="10px"-->
+        <!--            android:layout_marginLeft="10px"-->
+        <!--            android:layout_weight="1"-->
+        <!--            android:text="Học Phần"-->
+        <!--            android:textColor="#020202"-->
+        <!--            android:layout_marginBottom="15px"-->
+        <!--            android:textSize="25sp" />-->
 
         <FrameLayout
             android:id="@+id/frame_home"
