--- a/app/src/main/res/layout/answer_custom.xml
+++ b/app/src/main/res/layout/answer_custom.xml
@@ -13,7 +13,7 @@
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="32dp"
         android:layout_marginBottom="70dp"
-        android:background="@color/colorBlue"
+        android:background="@drawable/custom"
         android:gravity="center_vertical"
         android:paddingLeft="20dp"
         android:text="Question"
