--- a/app/src/main/res/layout/course_item.xml
+++ b/app/src/main/res/layout/course_item.xml
@@ -42,5 +42,30 @@
         android:textSize="15dp"
         />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/imgCourse"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            />
+
+        <TextView
+            android:id="@+id/txtUserName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:hint="Term"
+            android:maxLines="1"
+            android:textColor="@color/Black"
+            android:textSize="15dp"
+            android:layout_marginLeft="10dp"
+            android:textStyle="italic" />
+    </LinearLayout>
+
+
 
 </LinearLayout>
